--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     <body>
         <header>
             <nav>
+                <div class="logo">
+                    <img src="images/blacklogo.png" alt="black text that says genisis">
+                </div>
                 <ul>
                     <li>
-                        <svg class="logo" src="images\blacklogo.svg" alt="black text that says genisis"></svg>
+                        <a class="bold" href="pages\projects.html">Projects</a>
                     </li>
                     <li>
-                        <a class="bold" href="linkproject">Projects</a>
-                    </li>
-                    <li>
-                        <a class="bold" href="linkcontact">Contact</a>
+                        <a class="bold" href="pages\contact.html">Contact</a>
                     </li>
                 </ul>
             </nav>
             <div class="header_cont">
                 <div class="header_fetus">
-                    <h4>Shooting Stars</h4>
-                    <h2>Hello, I’m Bakhtiyar Sattarov,
-                        product designer with experience
+                    <h4 class="blue">Shooting Stars</h4>
+                    <h2>Hello, I’m Bakhtiyar Sattarov,<br>
+                        <span class="blue">product designer</span> with experience <br>
                         in studios and startups</h2>
                 </div>
                 <div class="header_fetus">
@@ -55,7 +55,7 @@
                 </div>
             </section>
             <div class="middle_father">
-                <div>
+                <div class="middle_bold">
                     <h3>We love work hard and explore 
                     new things that’s why we cover lot of things. 
                     Check our service list and view details</h3>
@@ -72,75 +72,75 @@
                 </div>
             </div>
             <section class="awards">
-                <div class="awwwards_father">
-                    <div><h4>Awwwards</h4></div>
+                <div class="awards_father">
+                    <h4>Awwwards</h4>
                     <div class="award_titles"> 
                         <p class="bold">Site of the day</p>
                         <p class="bold">Best navigation</p>
                     </div>
-                    <div class="award_winningsamples">
-                        <div>
-                            <p>Genesis UI Kit</p>
+                    <div class="award_fetus">
+                        <div class="award_items">
+                            <p class="award_bold">Genesis UI Kit</p>
                             <p>Application that helps 
                                 to find nearest sport centres</p>
                         </div>
-                        <div>
-                            <p>Genesis Template</p>
+                        <div class="award_items">
+                            <p class="award_bold">Genesis Template</p>
                             <p>Application that helps 
                                 to find nearest sport centres</p>
                         </div>
-                        <div class="award_year">
-                            <p>2018</p>
-                            <p>2018</p>
-                        </div>
+                    </div>
+                    <div class="award_year">
+                        <p>2018</p>
+                        <p>2018</p>
                     </div>
                 </div>
-                <div class="awwwards_father">
-                    <div><h4>CSSDesignAwards</h4></div>
+                <div class="awards_father">
+                    <h4>CSSDesignAwards</h4>
                     <div class="award_titles"> 
                         <p class="bold">Site of the day</p>
                         <p class="bold">Best navigation</p>
                     </div>
-                    <div class="award_winningsamples">
-                        <div>
-                            <p>Genesis UI Kit</p>
+                    <div class="award_fetus">
+                        <div class="award_items">
+                            <p class="award_bold">Genesis UI Kit</p>
                             <p>Application that helps 
                                 to find nearest sport centres</p>
                         </div>
-                        <div>
-                            <p>Genesis Template</p>
+                        <div class="award_items">
+                            <p class="award_bold">Genesis Template</p>
                             <p>Application that helps 
                                 to find nearest sport centres</p>
                         </div>
-                        <div class="award_year">
-                            <p>2017</p>
-                            <p>2016</p>
-                        </div>
+                    </div>
+                    <div class="award_year">
+                        <p>2018</p>
+                        <p>2018</p>
                     </div>
                 </div>
             </section>
         </main>
         <footer>
-            <div class="foot_father">
+            <nav class="navfoot">
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="images\blacklogo.png" alt="black text that says genisis">
+                    </a>
+                </div>
                 <ul>
-                    <li>
-                        <img src="logo" alt="">
+                    <li class="icons">
+                        <a class="icons_link" href="#"><img class="icons_social" src="images\dribbble-logo.png" alt="black and white dribble logo"></a>
+                        <a class="icons_link" href="#"><img class="icons_social" src="images\instagram.png" alt="black and white instagram logo"></a>
+                        <a class="icons_link" href="#"><img class="icons_social" src="images\twitter-logo-silhouette.png" alt="black and white twitter logo"></a>
                     </li>
                     <li>
-                        <a class="bold" href="linkproject">Projects</a>
+                        <a class="bold" href="/pages/projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="linkcontact">Contact</a>
-                    </li>
-                    <li>
-                        <div class="foot_icons">
-                            <img src="images\dribbble-logo.png" alt="">
-                            <img src="images\instagram.png" alt="">
-                            <img src="images\twitter-logo-silhouette.png" alt="">
-                        </div>
+                        <a class="bold" href="/pages/contact.html">Contact</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </footer>
     </body>
 </html>
